# Maddheshiya-Studio

./: .gitignore  LICENSE  README.md  backup_pg17.dump  render.yaml
backend/: .gitignore  Procfile  manage.py  pyproject.toml
backend/maddheshiyaStudio/: asgi.py  settings.py  urls.py  wsgi.py
backend/services/: admin.py  models.py  serializers.py  urls.py  views.py
backend/services/migrations/: 0001_initial.py  0002_initial.py  0003_rename_title_service_name_remove_service_created_at_and_more.py  0004_remove_uploadedmedia_image_and_more.py  0005_alter_service_whats_included.py
backend/store/: admin.py  models.py  serializers.py  urls.py  views.py
backend/store/migrations/: 0001_initial.py  0002_initial.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_customuser_profile_image.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/src/app/: ClientWrapper.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/forgot-password/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/cart/: page.tsx
frontend/src/app/components/: Contact.tsx  CreativeServices.tsx  Footer.tsx  Gear.tsx  Hero.tsx  Navbar.tsx  PhotoGallery.tsx  Services.tsx  Studios.tsx  Testimonials.tsx  VideoGallery.tsx
frontend/src/app/context/: AuthContext.tsx
frontend/src/app/hooks/: use-toast.ts
frontend/src/app/lib/: queryClient.ts
frontend/src/app/types/: custom.d.ts  model-viewer.d.ts
(+15 files in other folders)
